tests/integration/security/filebased_tls_origination/test_artifacts/security-filebased-tls-origination-/TestEgressGatewayTls/No_TLS_origination_from_egress_gateway_to_https_endpoint/_test_context/DestinationRule.341426046.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-filebased-disabled
spec:
  host: "external-service.serverns-2-64913.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: DISABLE
          sni: external-service.serverns-2-64913.svc.cluster.local
